--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     </script>
     <!-- TODO: test on IE edge?? -->
 
-    <meta name="description" content="Ningning Xie">
-    <meta name="author" content="Ningning Xie">
+    <meta name="description" content="Han Xu">
+    <meta name="author" content="Han Xu">
 
     <title>Han Xu</title>
     <link rel="shortcut icon" type="image/x-icon" href="image/icon.png">
@@ -151,6 +151,8 @@
                         Andong Fan, <author>Han Xu</author>, Ningning Xie 
                         <br>
                         <a href="https://pldi25.sigplan.org/">PLDI 2025</a>
+                        <a href="https://dl.acm.org/doi/10.1145/3729338">[doi]</a>
+                        <a href="./papers/pldi25level.pdf">[paper]</a>
                         <a href="https://zenodo.org/records/14996577">[artifact]</a>
                     </p>
                 </li>
