--- a/index.html
+++ b/index.html
@@ -146,6 +146,17 @@
             <ul>
                 <li>
                     <p>
+                        <paper>Liberating Merges via Apartness and Guarded Subtyping</paper>
+                        <br>
+                        <author>Han Xu</author>, Xuejing Huang, Bruno C. d. S. Oliveira 
+                        <br>
+                        <a href="https://2025.splashcon.org/">OOPSLA 2025</a>
+                        <a href="./papers/oopsla25apartness.pdf">[paper]</a>
+                        <a href="https://zenodo.org/records/16921686">[artifact]</a>
+                    </p>
+                </li>
+                <li>
+                    <p>
                         <paper>Practical Type Inference with Levels</paper>
                         <br>
                         Andong Fan, <author>Han Xu</author>, Ningning Xie 
