--- a/index.html
+++ b/index.html
@@ -115,24 +115,25 @@
                 </div>
             </div>
 
-        <div class="row">
-            <div class="col-md-12" id="about">
-                <h2>About</h2>
-                <p>
-                    I am a second-year Ph.D. working on programming languages, working with
-                    <a href="https://www.cs.princeton.edu/~dpw/">David Walker</a>
-					and <a href="https://www.cs.princeton.edu/~zkincaid/">Zachary Kincaid</a>
-                    at <a href="https://www.princeton.edu">Princeton</a>. Previously, I was an undergraduate at <a href="https://english.pku.edu.cn/">Peking University</a>, advised by
-                    <a href="https://zhenjiang888.github.io/">Zhenjiang Hu</a>.
-					
-					<br>
-					<br>
-					
-					My research interests span many topics. I have worked on differential calculus and intersection types in the past, and I am currently working on network programming languages, resource analysis and functional programming.
-					I am very fortunate to work with some of the best researchers in these fields.
-                </p>
-            </div>
-        </div>
+<div class="row">
+  <div class="col-md-12" id="about">
+    <h2>About</h2>
+    <p>
+      I am a third-year Ph.D. student in <a href="https://www.cs.princeton.edu">Computer Science at Princeton University</a>, 
+      advised by <a href="https://www.cs.princeton.edu/~dpw/">David Walker</a> and 
+      <a href="https://www.cs.princeton.edu/~zkincaid/">Zachary Kincaid</a>. 
+      Previously, I completed my undergraduate studies at 
+      <a href="https://english.pku.edu.cn/">Peking University</a>, where I was advised by 
+      <a href="https://zhenjiang888.github.io/">Zhenjiang Hu</a>.
+    </p>
+    <p>
+      My research interests span many topics. 
+      I have worked on differential calculus and type systems, and I am currently exploring 
+      network programming languages and resource analysis. 
+      I feel very fortunate to collaborate with some of the top researchers across these areas.
+    </p>
+  </div>
+</div>
 
 
 
