--- a/index.html
+++ b/index.html
@@ -203,6 +203,7 @@
 						<author>Han Xu</author>, Zhenjiang Hu                     
 						<br>
                         <a href="https://easyconferences.eu/icalp2021/">ICALP 2021</a>
+                        <a href="https://doi.org/10.4230/LIPIcs.ICALP.2021.143">[doi]</a>
                         <a href="https://arxiv.org/abs/2105.02632">[arxiv]</a>
                         <a href="./papers/icalp21analytical.pdf">[paper]</a>
                     </p>
