--- a/index.html
+++ b/index.html
@@ -154,6 +154,8 @@
                         <a href="https://2025.splashcon.org/">OOPSLA 2025</a>
                         <a href="./papers/oopsla25apartness.pdf">[paper]</a>
                         <a href="https://zenodo.org/records/16921686">[artifact]</a>
+                        <br>
+			<b style="color:green">ACM SIGPLAN Distinguished Artifact Award</b>
                     </p>
                 </li>
                 <li>
