--- a/index.html
+++ b/index.html
@@ -152,6 +152,7 @@
                         <author>Han Xu</author>, Xuejing Huang, Bruno C. d. S. Oliveira 
                         <br>
                         <a href="https://2025.splashcon.org/">OOPSLA 2025</a>
+                        <a href="https://dl.acm.org/doi/10.1145/3763057">[doi]</a>
                         <a href="./papers/oopsla25apartness.pdf">[paper]</a>
                         <a href="https://zenodo.org/records/16921686">[artifact]</a>
                         <br>
