--- a/index.html
+++ b/index.html
@@ -147,6 +147,17 @@
             <ul>
                 <li>
                     <p>
+                        <paper>Network Change Validation with Relational NetKAT</paper>
+                        <br>
+                        <author>Han Xu</author>, Zachary Kincaid, Ratul Mahajan, David Walker 
+                        <br>
+                        <a href="https://popl26.sigplan.org/">POPL 2026</a>
+                        <a href="./papers/popl26relational.pdf">[paper]</a>
+                        <a href="https://zenodo.org/records/17650920">[artifact]</a>
+                    </p>
+                </li>			
+                <li>
+                    <p>
                         <paper>Liberating Merges via Apartness and Guarded Subtyping</paper>
                         <br>
                         <author>Han Xu</author>, Xuejing Huang, Bruno C. d. S. Oliveira 
