--- a/index.html
+++ b/index.html
@@ -96,7 +96,6 @@
                 <div id="personal-contact" class="col-md-6" >
                     <!-- <br> -->
                     <b><font size="+4">Han Xu</font></b>
-                    
                     <p>
                         <br>
                         Department of Computer Science, Princeton University
@@ -118,14 +117,18 @@
 <div class="row">
   <div class="col-md-12" id="about">
     <h2>About</h2>
-    <p>
-      I am a third-year Ph.D. student in <a href="https://www.cs.princeton.edu">Computer Science at Princeton University</a>, 
-      advised by <a href="https://www.cs.princeton.edu/~dpw/">David Walker</a> and 
-      <a href="https://www.cs.princeton.edu/~zkincaid/">Zachary Kincaid</a>. 
-      Previously, I completed my undergraduate studies at 
-      <a href="https://english.pku.edu.cn/">Peking University</a>, where I was advised by 
-      <a href="https://zhenjiang888.github.io/">Zhenjiang Hu</a>.
-    </p>
+<p>
+  I am a third-year Ph.D. student in 
+  <a href="https://www.cs.princeton.edu">Computer Science at Princeton University</a>, 
+  advised by <a href="https://www.cs.princeton.edu/~dpw/">David Walker</a> and 
+  <a href="https://www.cs.princeton.edu/~zkincaid/">Zachary Kincaid</a>. 
+  I received my undergraduate degree from 
+  <a href="https://english.pku.edu.cn/">Peking University</a>, where I was advised by 
+  <a href="https://zhenjiang888.github.io/">Zhenjiang Hu</a>. 
+  I have also had a long-term research collaboration with 
+  <a href="https://i.cs.hku.hk/~bruno/">Bruno C. d. S. Oliveira</a> 
+  at <a href="https://www.hku.hk/">the University of Hong Kong</a>.
+</p>
     <p>
       My research interests span many topics. 
       I have worked on differential calculus and type systems, and I am currently exploring 
