Add DOI link for POPL 2026 paper

--- a/index.html
+++ b/index.html
@@ -155,6 +155,7 @@
                         <author>Han Xu</author>, Zachary Kincaid, Ratul Mahajan, David Walker 
                         <br>
                         <a href="https://popl26.sigplan.org/">POPL 2026</a>
+                        <a href="https://dl.acm.org/doi/10.1145/3776656">[doi]</a>
                         <a href="./papers/popl26relational.pdf">[paper]</a>
                         <a href="https://zenodo.org/records/17650920">[artifact]</a>
                     </p>
