--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
   I received my undergraduate degree from 
   <a href="https://english.pku.edu.cn/">Peking University</a>, where I was advised by 
   <a href="https://zhenjiang888.github.io/">Zhenjiang Hu</a>. 
-  I have also had a long-term research collaboration with 
+  I also worked closely with 
   <a href="https://i.cs.hku.hk/~bruno/">Bruno C. d. S. Oliveira</a> 
   at <a href="https://www.hku.hk/">the University of Hong Kong</a>.
 </p>
