--- a/index.html
+++ b/index.html
@@ -131,8 +131,8 @@
 </p>
     <p>
       My research interests span many topics. 
-      I have worked on differential calculus and type systems, and I am currently exploring 
-      network programming languages and resource analysis. 
+      I have worked on differential calculus, type systems and resource analysis, and I am currently exploring 
+      network programming languages and automata theory. 
       I feel very fortunate to collaborate with some of the top researchers across these areas.
     </p>
   </div>
@@ -148,6 +148,17 @@
             <h2> Publications </h2>
 
             <ul>
+                <li>
+                    <p>
+                        <paper>Dependently-Typed AARA: A Non-Affine Approach for Resource Analysis of Higher-Order Programs</paper>
+                        <br>
+                        <author>Han Xu</author>, Di Wang 
+                        <br>
+                        <a href="https://etaps.org/2026/conferences/esop/">ESOP 2026</a>
+                        <a href="https://arxiv.org/abs/2601.12943">[arxiv]</a>
+                        <a href="./papers/esop26resource.pdf">[paper]</a>
+                    </p>
+                </li>			
                 <li>
                     <p>
                         <paper>Network Change Validation with Relational NetKAT</paper>
